<resources>
    <string name="app_name">Dice Roller</string>
    <string name="roll">Roll</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_5">5</string>
    <string name="startingNumOfRolls">You have 3 rolls.</string>
    <string name="press_the_roll_button">Press the roll button</string>
    <string name="start_play_message">Press Roll to start</string>
    <string name="reset">Reset</string>
</resources>